--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,1 @@
-<div class="container-fluid">
-  <div class="row d-flex justify-content-center">
-    <div class="col-12 col-sm-6 bg-dark bg-gradient text-light">
-      <div class="mb-3">
-        <label class="form-label">Task</label>
-        <input class="form-control" [formControl]="taskControl">
-      </div>
-      <div class="mb-3 d-flex">
-        <button class="btn btn-primary ms-auto" (click)="add()">ADD</button>
-      </div>
-    </div>
-  </div>
-  <div *ngFor="let item of items; let i = index" class="row mt-3 d-flex justify-content-center">
-    <div class="col-12 col-sm-6 bg-dark bg-gradient text-light">
-      <div class="py-3">{{i + 1}}. {{item}}</div>
-    </div>
-  </div>
-</div>
+<app-todo-list></app-todo-list>
