--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -15,7 +15,12 @@
   </div>
   <div *ngFor="let item of items; let i = index" class="row mt-3 d-flex justify-content-center">
     <div class="col-12 col-sm-6 bg-dark bg-gradient text-light">
-      <div class="py-3">{{i + 1}}. {{item}}</div>
+      <div class="py-1 d-flex align-items-center">
+        <div>{{i + 1}}. {{item}}</div>
+        <button mat-mini-fab color="default" class="ms-auto" (click)="delete(i)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </div>
     </div>
   </div>
 </div>
